# navigate-ai-mini-app

./: .gitignore  DEPLOY.md  GROK_CONTINUATION_REPORT_RU.md  GROK_OPTIMIZATION_BRIEF_RU.md  GROK_PROJECT_BRIEF_RU.md  PROJECT_HANDOFF_RU.md  index.html
navigator-ai/: .dockerignore  .env.example  .env.production.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
navigator-ai/alembic/: env.py
navigator-ai/alembic/versions/: 001_initial.py  002_gamification_routing.py  003_user_templates.py  004_premium_test_override.py  005_premium_minimal_v2.py
navigator-ai/backend/app/: __init__.py  main.py  worker.py
navigator-ai/backend/app/api/: deps.py
navigator-ai/backend/app/core/: config.py  database.py  logging_config.py  security.py  (+3 more)
navigator-ai/bot/: config.py  main.py
navigator-ai/bot/handlers/: __init__.py  commands.py  messages.py  owner_test.py  payments.py
navigator-ai/bot/middlewares/: private_only.py
navigator-ai/bot/services/: api_client.py
navigator-ai/bot/utils/: keyboard.py  menu.py
navigator-ai/frontend/: ANALYSIS_V2.2.md  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
navigator-ai/frontend/src/: App.tsx  index.css  main.tsx
navigator-ai/nginx/: nginx.api.conf  nginx.conf
navigator-ai/scripts/: deploy-server.sh  deploy-to-vps.sh  remote-install.exp  setup-osrm-data.sh
navigator-ai/tests/: conftest.py  test_ai_parse.py  test_health.py  test_limits.py  test_owner_test_mode.py  test_security.py
(+110 files in other folders)
